[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/optionsback.png" type="Texture" id=1]
[ext_resource path="res://sprites/buttons/back.png" type="Texture" id=2]
[ext_resource path="res://sprites/buttons/back_mo.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons/sound.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons/music.png" type="Texture" id=5]
[ext_resource path="res://sprites/buttons/tutorial.png" type="Texture" id=6]
[ext_resource path="res://Options.gd" type="Script" id=7]
[ext_resource path="res://sprites/buttons/sound_mo.png" type="Texture" id=8]
[ext_resource path="res://sprites/buttons/music_mo.png" type="Texture" id=9]
[ext_resource path="res://sprites/buttons/tutorial_mo.png" type="Texture" id=10]

[node name="Options" type="Node"]
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 600 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 604.0
margin_right = 1920.0
margin_bottom = 940.0

[node name="opadding" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 860.0
margin_bottom = 336.0
rect_min_size = Vector2( 860, 0 )

[node name="OptionsMenu" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 864.0
margin_right = 1255.0
margin_bottom = 336.0

[node name="MusicBox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/OptionsMenu"]
margin_right = 391.0
margin_bottom = 55.0

[node name="MusicWord" type="TextureButton" parent="VBoxContainer/HBoxContainer/OptionsMenu/MusicBox"]
unique_name_in_owner = true
margin_right = 187.0
margin_bottom = 55.0
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 9 )

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/OptionsMenu/MusicBox"]
unique_name_in_owner = true
margin_left = 191.0
margin_bottom = 55.0
rect_min_size = Vector2( 200, 0 )
min_value = -50.0
max_value = 15.0
step = 5.0
tick_count = 14
ticks_on_borders = true

[node name="SoundBox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/OptionsMenu"]
margin_top = 59.0
margin_right = 391.0
margin_bottom = 114.0

[node name="SoundWord" type="TextureButton" parent="VBoxContainer/HBoxContainer/OptionsMenu/SoundBox"]
unique_name_in_owner = true
margin_right = 187.0
margin_bottom = 55.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 8 )

[node name="SoundSlider" type="HSlider" parent="VBoxContainer/HBoxContainer/OptionsMenu/SoundBox"]
unique_name_in_owner = true
margin_left = 191.0
margin_right = 391.0
margin_bottom = 55.0
rect_min_size = Vector2( 200, 0 )
min_value = -50.0
max_value = 15.0
step = 5.0
tick_count = 14
ticks_on_borders = true

[node name="TutorialBox" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/OptionsMenu"]
margin_top = 118.0
margin_right = 391.0
margin_bottom = 173.0

[node name="TutorialWord" type="TextureButton" parent="VBoxContainer/HBoxContainer/OptionsMenu/TutorialBox"]
unique_name_in_owner = true
margin_right = 140.0
margin_bottom = 55.0
mouse_filter = 2
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )

[node name="tutorial padding" type="Control" parent="VBoxContainer/HBoxContainer/OptionsMenu/TutorialBox"]
margin_left = 144.0
margin_right = 175.0
margin_bottom = 55.0
rect_min_size = Vector2( 31, 0 )

[node name="TutorialButton" type="CheckButton" parent="VBoxContainer/HBoxContainer/OptionsMenu/TutorialBox"]
unique_name_in_owner = true
margin_left = 179.0
margin_right = 255.0
margin_bottom = 55.0

[node name="opadding2" type="Control" parent="VBoxContainer/HBoxContainer/OptionsMenu"]
margin_top = 177.0
margin_right = 391.0
margin_bottom = 277.0
rect_min_size = Vector2( 0, 100 )

[node name="BackButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/OptionsMenu"]
margin_top = 281.0
margin_right = 391.0
margin_bottom = 336.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/OptionsMenu/MusicBox/MusicSlider" to="." method="_on_MusicSlider_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/OptionsMenu/MusicBox/MusicSlider" to="." method="_on_MusicSlider_focus_exited"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/OptionsMenu/MusicBox/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="drag_ended" from="VBoxContainer/HBoxContainer/OptionsMenu/SoundBox/SoundSlider" to="." method="_on_SoundSlider_drag_ended"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/OptionsMenu/SoundBox/SoundSlider" to="." method="_on_SoundSlider_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/HBoxContainer/OptionsMenu/SoundBox/SoundSlider" to="." method="_on_SoundSlider_focus_exited"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/OptionsMenu/SoundBox/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/OptionsMenu/TutorialBox/TutorialButton" to="." method="_on_TutorialButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/HBoxContainer/OptionsMenu/TutorialBox/TutorialButton" to="." method="_on_TutorialButton_mouse_exited"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/OptionsMenu/TutorialBox/TutorialButton" to="." method="_on_TutorialButton_toggled"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/OptionsMenu/BackButton" to="." method="_on_BackButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OptionsMenu/BackButton" to="." method="_on_BackButton_pressed"]
